@@ -17,14 +17,14 @@ const getPreviewHtml = (editor: Editor) => {
 
   headHtml += '<base href="' + encode(editor.documentBaseURI.getURI()) + '">';
 
-  if (contentStyle) {
-    headHtml += '<style type="text/css">' + contentStyle + '</style>';
-  }
-
   const cors = Settings.shouldUseContentCssCors(editor) ? ' crossorigin="anonymous"' : '';
   Tools.each(editor.contentCSS, (url) => {
     headHtml += '<link type="text/css" rel="stylesheet" href="' + encode(editor.documentBaseURI.toAbsolute(url)) + '"' + cors + '>';
   });
+
+  if (contentStyle) {
+    headHtml += '<style type="text/css">' + contentStyle + '</style>';
+  }
 
   const bodyId = Settings.getBodyId(editor);
 
