@@ -28,16 +28,26 @@ UnitTest.asynctest('browser.tinymce.plugins.preview.PreviewContentStyleTest', (s
 
   TinyLoader.setupLight(function (editor, onSuccess, onFailure) {
     const tinyApis = TinyApis(editor);
+    const contentCssUrl = editor.documentBaseURI.toAbsolute('/project/tinymce/js/tinymce/skins/content/default/content.css');
 
-    Pipeline.async({},
-      Log.steps('TBA', 'Preview: Set content, set style setting and assert content and style. Delete style and assert style is removed', [
+    Pipeline.async({}, [
+      Log.stepsAsStep('TBA', 'Preview: Set content, set style setting and assert content and style. Delete style and assert style is removed', [
         tinyApis.sSetContent('<p>hello world</p>'),
         tinyApis.sSetSetting('content_style', 'p {color: blue;}'),
         sAssertIframeHtmlContains(editor, '<style type="text/css">p {color: blue;}</style>'),
         tinyApis.sDeleteSetting('content_style'),
         sAssertIframeHtmlNotContains(editor, '<style type="text/css">p {color: blue;}</style>')
+      ]),
+      Log.stepsAsStep('TINY-6529', 'Preview: Set content, set style settings and assert content and styles. content_style should take precedence. Delete style and assert style is removed', [
+        tinyApis.sSetContent('<p>hello world</p>'),
+        tinyApis.sSetSetting('content_css_cors', true),
+        tinyApis.sSetSetting('content_style', 'p {color: blue;}'),
+        sAssertIframeHtmlContains(editor, `<link type="text/css" rel="stylesheet" href="${contentCssUrl}" crossorigin="anonymous"><style type="text/css">p {color: blue;}</style>`),
+        tinyApis.sSetSetting('content_css_cors', false),
+        tinyApis.sDeleteSetting('content_style'),
+        sAssertIframeHtmlNotContains(editor, '<style type="text/css">p {color: blue;}</style>')
       ])
-      , onSuccess, onFailure);
+    ], onSuccess, onFailure);
   }, {
     theme: 'silver',
     plugins: 'preview',
