@@ -50,11 +50,7 @@ type UpdateDialogCallback = (dialogApi: Dialog.DialogInstanceApi<DialogData>, te
 const getPreviewContent = (editor: Editor, html: string) => {
   if (html.indexOf('<html>') === -1) {
     let contentCssEntries = '';
-
     const contentStyle = Settings.getContentStyle(editor);
-    if (contentStyle) {
-      contentCssEntries += '<style type="text/css">' + contentStyle + '</style>';
-    }
 
     const cors = Settings.shouldUseContentCssCors(editor) ? ' crossorigin="anonymous"' : '';
 
@@ -63,6 +59,10 @@ const getPreviewContent = (editor: Editor, html: string) => {
         editor.documentBaseURI.toAbsolute(url) +
         '"' + cors + '>';
     });
+
+    if (contentStyle) {
+      contentCssEntries += '<style type="text/css">' + contentStyle + '</style>';
+    }
 
     const bodyClass = Settings.getBodyClass(editor);
 
